Fixed the popover alignment issue with the badge and only one instance of popover is available. Also fixed the livelist title issue

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -557,8 +557,7 @@ html, body {
   //BADGE
   .badge {
     position: absolute;
-    top: 9pt;
-    right: 9pt;
+    right: 2px;
   }
 }
 
@@ -1068,6 +1067,9 @@ body.modal-open {
     display: table;
     table-layout: fixed;
     width: 100%;
+    .form-header {
+      display: table-caption;
+    }
     .app-livelist-container {
       padding: 0;
       .app-list-item {
